load("//bazel:defs.bzl", "nt_rust_library", "nt_rust_test")

package(default_visibility = ["//visibility:public"])

# MCPS-053 (Phase 6.6, epic #3948): the reusable, verifying mTLS CLIENT
# transport. Presents a client certificate AND verifies the proxy's server
# certificate + identity against a configured server CA (rustls WebPkiServerVerifier
# — NOT an accept-any verifier). Blocking std::net + rustls (ring); NO async
# runtime. Depends on NEITHER mcp-re-proxy NOR the transport-free mcp-re-host.
nt_rust_library(
    name = "mcp_re_transport",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "mcp_re_transport",
    edition = "2021",
    deps = [
        "@crates_mcp_re//:rustls",
        "@crates_mcp_re//:rustls-pki-types",
        "@crates_mcp_re//:thiserror",
    ],
)

# Server authentication is NOT optional: trusted accept, untrusted reject,
# wrong-identity reject, expired reject — all against the real mcp_re_proxy server
# (serve_once) on a thread, with certs minted in-process via rcgen. Plus
# client-cert presentation (server extracts the verified identity).
nt_rust_test(
    name = "mtls_client_test",
    srcs = ["tests/mtls_client_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcp_re_transport",
        "//mcp-re-proxy:mcp_re_proxy",
        "@crates_mcp_re//:rcgen",
        "@crates_mcp_re//:rustls",
        "@crates_mcp_re//:rustls-pki-types",
        "@crates_mcp_re//:serde_json",
    ],
)

# MCPS-081 — transport-client DoS hardening (audit M-3/M-4/M-5/M-6). Stands up a
# stalling raw-TCP peer and a flooding real-mTLS server to prove the client's
# connect/read/write timeouts and bounded response read are present AND
# load-bearing. Runs on EVERY `bazel test //...` (NOT `manual`).
nt_rust_test(
    name = "dos_hardening_test",
    srcs = ["tests/dos_hardening_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        ":mcp_re_transport",
        "//mcp-re-proxy:mcp_re_proxy",
        "@crates_mcp_re//:rcgen",
        "@crates_mcp_re//:rustls",
        "@crates_mcp_re//:rustls-pki-types",
    ],
)

# MCPS-071 — fault injection ("test of the tests"). Runs on EVERY `bazel test //...`
# (NOT `manual`) so the control can never silently rot. It DELIBERATELY breaks the
# server-authentication control by compiling both the library dep AND this test
# with `--features fault_accept_any_server`, then asserts that an untrusted /
# wrong-identity server cert is now ACCEPTED — the exact negation of the
# mtls_client_test guards — proving those guards are load-bearing. The feature is
# off by default and only this separate `:mcp_re_transport_fault` instance turns it
# on; the production verifying `:mcp_re_transport` is never built with it.
#
# `crate_features` enables the feature for THIS test crate's own
# `#[cfg(feature = ...)]`; the library dep below is rebuilt with the matching
# `--features` via the shared crate-feature propagation, so the faulted verifier
# path in mcp_re_transport is the one linked here.
nt_rust_test(
    name = "fault_injection_test",
    srcs = ["tests/fault_injection_test.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    crate_features = ["fault_accept_any_server"],
    edition = "2021",
    deps = [
        ":mcp_re_transport_fault",  # keep
        "//mcp-re-proxy:mcp_re_proxy",
        "@crates_mcp_re//:rcgen",
        "@crates_mcp_re//:rustls",
        "@crates_mcp_re//:rustls-pki-types",
        "@crates_mcp_re//:serde_json",
    ],
)

# A SEPARATE library instance of mcp-re-transport built WITH the fault feature, so
# the faulted verifier is compiled into the fault-injection test. The default
# `:mcp_re_transport` above is never built with this feature; production and the
# production binaries link only the verifying instance. Built on every
# `bazel test //...` (NOT `manual`) so it can never silently fail to compile.
nt_rust_library(
    name = "mcp_re_transport_fault",
    srcs = glob(["src/**/*.rs"]),
    crate_features = ["fault_accept_any_server"],
    crate_name = "mcp_re_transport",
    edition = "2021",
    deps = [
        "@crates_mcp_re//:rustls",
        "@crates_mcp_re//:rustls-pki-types",
        "@crates_mcp_re//:thiserror",
    ],
)
