load("//bazel:defs.bzl", "nt_rust_library", "nt_rust_test")

package(default_visibility = ["//visibility:public"])

# ADR-MCPS-045: the persona-ladder walkthrough harness. The library spins up the
# real four-hop topology (ordinary client -> mcp-re-client-proxy-cli -> mcp-re-proxy
# -> mcp-re-demo-fileserver) as separate OS processes over mTLS-on-loopback, reusing
# DemoFixtures (mTLS material/trust) and AudienceTuple (the canonical audience
# both proxies must agree on). One test file per tier consumes it.
nt_rust_library(
    name = "mcp_re_walkthrough",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "mcp_re_walkthrough",
    edition = "2021",
    deps = [
        "//mcp-re-client-core:mcp_re_client_core",
        "//mcp-re-core:mcp_re_core",
        "//mcp-re-demo:mcp_re_demo",
        "//mcp-re-test-paths:mcp_re_test_paths",
        "@crates_mcp_re//:serde_json",
    ],
)

# The real binaries every tier spawns, delivered via runfiles and resolved from
# the matching $(rlocationpath ...) env keys. Under ADR-MCPRE-051 the server PEP
# reaches the inner over HTTP, so the unmodified stdio fileserver is fronted by
# the out-of-TCB mcp-re-stdio-bridge (spawned by the harness; resolved via
# MCP_RE_STDIO_BRIDGE, which mcp_re_demo::demo_bridge_binary reads).
_TIER_DATA = [
    "//mcp-re-client-proxy-cli:mcp_re_client_proxy_cli",
    "//mcp-re-proxy:mcp_re_proxy_cli",
    "//mcp-re-demo-fileserver:mcp_re_demo_fileserver_bin",
    "//mcp-re-stdio-bridge:mcp-re-stdio-bridge",
]

_TIER_ENV = {
    "MCP_RE_CLIENT_PROXY_CLI": "$(rlocationpath //mcp-re-client-proxy-cli:mcp_re_client_proxy_cli)",
    "MCP_RE_PROXY_CLI": "$(rlocationpath //mcp-re-proxy:mcp_re_proxy_cli)",
    "INNER_FILESERVER_BIN": "$(rlocationpath //mcp-re-demo-fileserver:mcp_re_demo_fileserver_bin)",
    "MCP_RE_STDIO_BRIDGE": "$(rlocationpath //mcp-re-stdio-bridge:mcp-re-stdio-bridge)",
}

# T0 — "Hello, signed call": one signed tools/call round-trips all four hops as
# plain MCP (object signing + response binding; no authorization yet).
nt_rust_test(
    name = "t0_hello_signed_call",
    srcs = ["tests/t0_hello_signed_call.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    data = _TIER_DATA,
    edition = "2021",
    env = _TIER_ENV,
    deps = [
        ":mcp_re_walkthrough",
        "@crates_mcp_re//:serde_json",
    ],
)

# T1 — "Real tools, fail closed": read/write/stat/list over the signed channel,
# plus a demo-root escape that fails closed as a clean plain-MCP error.
nt_rust_test(
    name = "t1_real_tools_fail_closed",
    srcs = ["tests/t1_real_tools_fail_closed.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    data = _TIER_DATA,
    edition = "2021",
    env = _TIER_ENV,
    deps = [
        ":mcp_re_walkthrough",
        "@crates_mcp_re//:serde_json",
    ],
)

# T3 — "External users": `--transport-binding exact` mTLS identity binding. A
# matching identity passes and is recorded in the inner's own received-log; the
# SAME mismatched cert passes with binding off but is denied-before-dispatch with
# `exact` (cross-process proof: absent from the inner's record, zero inner
# spawns); a wrong expected server name fails closed with no inner data.
nt_rust_test(
    name = "t3_external_users_transport_binding",
    srcs = ["tests/t3_external_users_transport_binding.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    data = _TIER_DATA,
    edition = "2021",
    env = _TIER_ENV,
    deps = [
        ":mcp_re_walkthrough",
        "@crates_mcp_re//:serde_json",
    ],
)

# SDK driver matrix — runs the T0 base case against every configured client SDK
# driver (ADR-MCPS-045 pluggable client-leg seam). The Rust reference driver
# (mcp-re-client-proxy-cli) is always present via the shared _TIER_DATA runfiles;
# the optional external SDK drivers join only when their MCP_RE_DRIVER_* env keys
# are set (skip-not-fail), so under Bazel this runs the always-on Rust lane.
# (MCPS-77: was gate-tracked drift — a cargo test with no Bazel target.)
nt_rust_test(
    name = "sdk_driver_matrix",
    srcs = ["tests/sdk_driver_matrix.rs"],
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    data = _TIER_DATA,
    edition = "2021",
    env = _TIER_ENV,
    deps = [
        ":mcp_re_walkthrough",
        "@crates_mcp_re//:serde_json",
    ],
)
