load("//bazel:defs.bzl", "nt_rust_binary", "nt_rust_test")

package(default_visibility = ["//visibility:public"])

# ADR-MCPS-045 Phase 3: the binary front-end for the local client-side MCP-S
# proxy. A plain-MCP stdio endpoint that signs draft-02 requests via
# mcps-client-core and forwards them to a remote MCP-S server/proxy over verifying
# mTLS (mcps-transport). The pure mcps-client-proxy library leaves the listener,
# the per-call freshness/nonce wiring, and the concrete RemoteTransport to this
# mode-specific binary; src/transport.rs is the mTLS adapter, src/main.rs the
# stdio loop. The OS-CSPRNG nonce source is reused from mcps-host.
nt_rust_binary(
    name = "mcps_client_proxy_cli",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "mcps_client_proxy_cli",
    edition = "2021",
    deps = [
        "//mcps-client-core:mcps_client_core",
        "//mcps-client-proxy:mcps_client_proxy",
        "//mcps-core:mcps_core",
        "//mcps-host:mcps_host",
        "//mcps-transport:mcps_transport",
        "@crates_mcps//:serde_json",
    ],
)

# Inline crate unit tests: arg parsing (defaults + required flags), the 6-field
# audience parser, and the 128-bit b64url nonce / freshness-window helper.
nt_rust_test(
    name = "mcps_client_proxy_cli_test",
    crate = ":mcps_client_proxy_cli",
    auto_cargo_toml = False,
    bazel_build_cfg = False,
    edition = "2021",
    deps = [
        "//mcps-client-core:mcps_client_core",
        "//mcps-client-proxy:mcps_client_proxy",
        "//mcps-core:mcps_core",
        "//mcps-host:mcps_host",
        "//mcps-transport:mcps_transport",
        "@crates_mcps//:serde_json",
    ],
)
