[package]
name = "mcps-client-proxy-cli"
version = "0.6.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Binary front-end for mcps-client-proxy (ADR-MCPS-045 Phase 3): a plain-MCP stdio endpoint that signs draft-02 requests via mcps-client-core and forwards them to a remote MCP-S server over verifying mTLS."

[dependencies]
# The MODE-SPECIFIC binary above the pure mcps-client-proxy/mcps-client-core
# seam: it owns the stdio listener, the per-call freshness/nonce wiring, and the
# concrete mTLS RemoteTransport adapter (mcps-transport). The library stays pure
# (trait-only transport); this crate supplies the real I/O.
mcps-client-proxy = { path = "../mcps-client-proxy" }
mcps-client-core = { path = "../mcps-client-core" }
mcps-core = { path = "../mcps-core" }
mcps-transport = { path = "../mcps-transport" }
# Production OS-CSPRNG nonce source (>= 128-bit), reused from the host ambassador.
mcps-host = { path = "../mcps-host" }
serde_json = { workspace = true }

[[bin]]
name = "mcps-client-proxy-cli"
path = "src/main.rs"
